--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "custom_detector"
+name="moe-leaeval-layer2-prework"
 version = "0.0.1"
 description = "A short description of the project."
 authors = [
@@ -16,16 +16,18 @@ classifiers = [
     
 ]
 dependencies = [
+    "matplotlib>=3.10.8",
     "mkdocs",
     "openai>=2.14.0",
     "pandera>=0.27.1",
     "pip",
+    "plotly>=6.5.0",
     "polars>=1.36.1",
     "pytest",
     "python-dotenv",
     "ruff",
 ]
-requires-python = "~=3.12.0"
+requires-python=">=3.12"
 
 
 [tool.ruff]
@@ -42,9 +44,11 @@ force-sort-within-sections = true
 
 [dependency-groups]
 dev = [
+    "ipykernel>=7.1.0",
     "jupytext>=1.18.1",
     "nbdev>=2.4.7",
     "nbdime>=4.0.2",
     "pygwalker>=0.4.9.15",
+    "quarto>=0.1.0",
 ]
 
